--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BetFriend",
+  "name": "bet-friend-client",
   "version": "1.0.0",
   "author": "a.ryshentsev",
   "scripts": {
@@ -7,11 +7,13 @@
     "start": "webpack-dev-server --hot"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.5.3",
+    "react-hot-loader": "^4.12.18",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
@@ -25,9 +27,12 @@
     "@babel/preset-react": "^7.7.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
